styles/style.css
@import url(/styles/normalize.css);
@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap");

*,
*::after,
*::before {
  box-sizing: border-box;
}

html {
  min-width: 375px;
}

a {
  text-decoration: none;
}

ol {
  padding: 0;
  list-style: none;
}

/* >Color palette */
:root {
  --color-: hsl(216, 30%, 68%);
  --color-heading: hsl(270, 9%, 17%);
  --color-primary: hsl(273, 4%, 51%);
  --color-secondary: hsl(0, 0%, 98%);

  --bg: hsl(256, 26%, 20%);
}

/* >Typography */
body {
  font-size: 16px;
  font-family: "Karla", sans-serif;
  color: var(--color-heading);
}

h1,
h2,
h3 {
  font-family: "DM Serif Display", serif;
}

h1,
h2 {
  font-size: 2.5rem;
  letter-spacing: 0.15ch;
}

h2,
h3 {
  color: var(--color-heading);
}

.about h2 {
  font-size: 2rem;
  color: white;
}

h3 {
  font-size: 1.5rem;
}

p {
  opacity: 0.7;
  line-height: 2.8ch;
  margin-bottom: 1.75rem;
}

header a {
  font-size: 1.45rem;
  text-transform: uppercase;
  color: var(--color-secondary);
}

a:focus {
  outline-width: 1rem;
}

@media (min-width: 680px) {
  h1,
  h2 {
    font-size: 4rem;
  }

  h1 {
    margin-top: 4.8rem;
    max-width: 550px;
  }

  .about h2 {
    font-size: 3rem;
    padding: 0;
    max-width: 500px;
  }

  header a {
    font-size: 1rem;
    font-weight: bold;
    color: var(--color-primary);
  }

  header a:hover {
    color: var(--color-heading);
  }
}

@media (min-width: 1250px) {
  h1,
  h2 {
    position: relative;
    padding-top: 4rem;
  }
  :is(h1, .features h2)::before {
    position: absolute;
    content: "";
    width: 150px;
    top: 0;
  }

  h1::before {
    border-top: 1px solid var(--color-secondary);
  }

  h2::before {
    border-top: 1px solid var(--color-heading);
  }
}

/* >container */
.container {
  max-width: 1250px;
  margin: 0 auto;
}

/* >Buttons */
button {
  font-size: 1rem;
  font-weight: bold;
  text-transform: uppercase;
  padding: 1rem 2rem;
  border: 1px solid var(--color-secondary);
  color: var(--color-secondary);
  background: transparent;
  cursor: pointer;
}

header button {
  width: 100%;
}

.button--primary:hover {
  color: var(--color-secondary);
  background: var(--color-heading);
}

.button--secondary:hover {
  color: var(--bg);
  background-color: var(--color-secondary);
}

@media (min-width: 680px) {
  .button--primary {
    width: fit-content;
    color: var(--color-heading);
    border-color: var(--color-heading);
  }
}

/* >main */
main {
  background: url(/images/bg-pattern-intro-left-desktop.svg) no-repeat 0 370px;
}

/* >Header */
header {
  position: relative;
}

header div {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1.5rem;
}

header nav {
  position: fixed;
  inset: 0;
  top: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
  width: 100%;
  height: 0;
  overflow: hidden;

  background: url(/images/bg-pattern-mobile-nav.svg) no-repeat bottom,
    linear-gradient(to bottom, var(--color-heading), var(--color-heading));
  background-size: contain;
  z-index: 36586;
  transition: all 0.2s ease-in;
}

nav.open {
  height: calc(100vh - 80px);
  padding: 3rem 1.5rem;
}

@media (min-width: 680px) {
  header {
    display: flex;
    align-items: center;
  }

  .menu-button {
    display: none;
  }

  header nav,
  nav.open {
    position: static;
    flex-direction: row;
    justify-content: flex-end;
    gap: 2rem;
    height: fit-content;
    padding: 1.5rem;
    background: transparent;
  }
}

/* >Hero */
.hero {
  background: var(--bg);
}

.hero img {
  width: 100%;
}

.hero .content {
  text-align: center;
  padding: 3rem 1.5rem 5rem;
  color: var(--color-secondary);
  background: url(/images/bg-pattern-intro-left-mobile.svg) no-repeat,
    url(/images/bg-pattern-intro-right-mobile.svg) no-repeat right
      calc(100% + 190px);
}

@media (min-width: 680px) {
  .hero {
    height: 600px;
    background: url(/images/bg-pattern-intro-left-desktop.svg) no-repeat 0 370px,
      url(/images/bg-pattern-intro-right-desktop.svg) no-repeat right,
      linear-gradient(to right, var(--bg), var(--bg));
  }

  .hero > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
  }

  .hero picture {
    display: grid;
    justify-items: right;
    order: 1;
    height: clamp(530px, 60vh, 540px);
    padding-right: 1.5rem;
  }

  .hero img {
    width: clamp(450px, 100%, 480px);
    transform: translateY(85px);
  }

  .hero .content {
    text-align: left;
    background: none;
  }
}

/* >Feature */
.features {
  text-align: center;
  padding: 6rem 1.5rem;
  background: url(/images/bg-pattern-intro-right-mobile.svg) no-repeat right -150px;
}

@media (min-width: 680px) {
  .features {
    text-align: left;
    padding: 10rem 1.5rem;
    background: none;
  }

  .feature-section {
    display: flex;
    gap: 1.5rem;
  }
}

/* >About */
.about {
  text-align: center;
  padding: 2.5rem 1rem;
  margin: 1.5rem;
  background: url(/images/bg-pattern-how-we-work-mobile.svg) no-repeat right,
    linear-gradient(to left, var(--bg), var(--bg));
}

@media (min-width: 680px) {
  .about {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: left;
    padding: 2.5rem 5rem;
    background: url(/images/bg-pattern-how-we-work-desktop.svg) no-repeat right,
      linear-gradient(to left, var(--bg), var(--bg));
  }
}

/* >Footer */
footer {
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
  padding: 5rem 1rem 3.5rem;
  margin-top: 8rem;
  background: url(/images/bg-pattern-footer-mobile.svg) no-repeat;
}

.footer__header {
  display: grid;
  justify-content: center;
  gap: 1.5rem;
  padding-bottom: 1.5rem;
  margin-bottom: 2rem;
  border-bottom: 1px solid var(--color-primary);
}

.social-plugins {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.social-plugins svg:hover path {
  cursor: pointer;
  fill: var(--color-heading);
}

footer li {
  margin: 0.8rem 0;
}

footer li:hover {
  text-decoration: underline;
  cursor: pointer;
}

footer li:first-child {
  margin-top: 2rem;
  margin-bottom: 1.5rem;
  color: var(--color-primary);
}

footer li:hover:first-child {
  cursor: default;
  text-decoration: none;
}

@media (min-width: 680px) {
  footer {
    padding: 5rem 1.5rem 3.5rem;
    text-align: left;
    background: url(/images/bg-pattern-footer-desktop.svg) no-repeat;
  }

  .footer__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  footer nav {
    display: flex;
    gap: 15vw;
  }

  footer li:first-child {
    margin-top: 0;
  }
}

